--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,10 @@
     <string name="new_user_register">新用户注册</string>
     <string name="login">登录</string>
     <string name="phone_number">手机号</string>
+    <string name="meeting_name">会议名称</string>
+    <string name="remark">备注</string>
+    <string name="meet_start_time">开始时间</string>
+    <string name="meet_end_time">结束时间</string>
+    <string name="apply_meet">申请会议</string>
+    <string name="choose_member">选择成员</string>
 </resources>
