--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,6 @@
     <string name="meet_end_time">结束时间</string>
     <string name="apply_meet">申请会议</string>
     <string name="choose_member">选择成员</string>
+    <string name="my_msg">我的消息</string>
+    <string name="msg_detail">消息详情</string>
 </resources>
